cyberWatch 1.3
========================
REFACTOR: onSwipe(up|down|left|right) methods instead of handle SwipeVertical/horizontal in apps

cyberWatch 1.2
========================
- FEATURE: new graphical logo
- FEATURE: vaporwave watch face
- FEATURE: lcars watch face
- FEATURE: logo watch face
- FEATURE: DeusEx watch face
- FEATURE: mosaic watch face
- REFACTOR: moved all watch faces into apps directory from userinterface
- REFACTOR: used defines for resolution width annd height instead tft->width() / height() calls
- REDACTOR: redesign analog watch face
- BUGFIX:when pekshort on alarm setting on after delete alarm > go back to alarm overview screen (was back on watch face before)
- REFACTOR: remove some unused classess
- REFACTOR: remove planetoid watch face

cyberWatch 1.1
========================
- FEATURE: apps menu
- FEATURE: apps can be controlled both vertical & horizontal swiping
- FEATURE: blank screen app when needed empty screen
- FEATURE: charging icon is charging || connected
- FEATURE: system info is standalone app accessible from app menu
- REFACTOR: watches faces changed by horizontal swipe inestead of vertical
- REFACTOR: renderTitle mehod in app
- REFACTOR: StopWatchRegistry class to store if stopwatch is running through whole app
- REFACTOR: remove unused AppRunner apps array ('cause apps are managed by app menu)
- REFACTOR: instead of array of run modes, new instance is created always when needed
- BUGFIX: fixed when "run once" alarm after ringing and turning system off and on is again enabled
- BUGFIX: fixed switching between charging and main modes and rerendering
- BUGFIX: fixed strange behaviour when battere percentage returns 127 - failback calculation by remaining voltage calculation


cyberWatch 1.0
========================
- REFACTOR: rewrite UI
- FEATURE: notification bar in top of the display
- FEATURE: locked display can be unlocked by "long touch" - (>0.4s)
- FEATURE: apps can handle long touch - (>0.4s)