@@ -126,7 +126,7 @@
 	<a name="apps-switching"></a>
 	<h3>Running apps</h3>
 	<div>
-		App menu is available by longtouch (&gt;>0.5s) on any watch face. Than select application by touch app icon. For return to
+		App menu is available by swipe down on any watch face. Than select application by touch app icon. For return to
 		watch face, press crown buutton.
 	</div>
 
@@ -139,7 +139,7 @@
 	<a name="settings"></a>
 	<h3>Device settings menu</h3>
 	<div>
-		Device settings menu is accessible via longtouch (&gt;0.5s) on any unlocked watch face.
+		Device settings menu is accessible from app menu.
 		This shows menu, where can be set followed: display adjust, display always on, vibration and activation by tilt up maneuver.
 		These settings are stored between device shutdowns/starts.
 	</div>
