@@ -1,6 +1,7 @@
 cyberWatch 1.3
 ========================
 REFACTOR: onSwipe(up|down|left|right) methods instead of handle SwipeVertical/horizontal in apps
+REFACTOR: AppMenu launching from watch faces by swipe up
 
 cyberWatch 1.2
 ========================
